# StylerOP

./: .gitignore
Styler-OP/: index.html  package-lock.json  package.json
Styler-OP-backend/: pyproject.toml  server.py
Styler-OP-backend/db/: mongo.py
Styler-OP-backend/models/: images.py  user.py
Styler-OP-backend/routes/: auth_routes.py  image_routes.py
Styler-OP-backend/service/: gemini_service.py
Styler-OP-backend/utils/: auth.py
Styler-OP/src/: App.css  App.tsx  main.tsx
Styler-OP/src/api/: auth.api.ts  axios.config.ts  images.api.ts
Styler-OP/src/components/navigation/: Footer.tsx  NavLinks.tsx  Navbar.tsx
Styler-OP/src/components/ui/: Button.tsx  sheet.tsx
Styler-OP/src/constants/: index.ts
Styler-OP/src/hooks/: All_Hooks.ts  authHooks.ts
Styler-OP/src/lib/: utils.ts
Styler-OP/src/pages/auth/: Auth.tsx
Styler-OP/src/pages/home/: DashBoard.tsx  Home.tsx
Styler-OP/src/pages/landing/: LandingPage.tsx
Styler-OP/src/pages/landing/sections/: CTA.tsx  Features.tsx  Hero.tsx  Scene3D.tsx  Showcase.tsx
Styler-OP/src/redux/: Store.ts  authStore.ts
Styler-OP/src/redux/slice/: authSlice.ts  imageSlice.ts
Styler-OP/src/services/: ProtectedRoutes.tsx  RefreshTokens.tsx
Styler-OP/src/type/: auth.types.ts
Styler-OP/src/types/: images.types.ts
Styler-OP/src/utils/: loggers.ts
